--- a/app/src/main/res/layout/settings_controller.xml
+++ b/app/src/main/res/layout/settings_controller.xml
@@ -22,6 +22,13 @@
         android:text="About The Team" />
 
     <Button
+        android:id="@+id/funnyDebug"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Developer Console" />
+
+
+    <Button
         android:id="@+id/back_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
