--- a/app/src/main/res/layout/debug_view_easteregg.xml
+++ b/app/src/main/res/layout/debug_view_easteregg.xml
@@ -3,12 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textSize="30dp"
+    android:gravity="center"
+    android:text="DEVELOPER CONSOLE IS STILL BEING DEVELOPED"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="189dp"
+        android:paddingTop="10dp"
+        android:src="@drawable/laugh"/>
 
 <ImageView
+    android:paddingTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:src="@drawable/construction"/>
-
 
 
     <Button
