--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,20 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_home"
-        android:icon="@drawable/brooke"
+        android:icon="@drawable/home"
         android:title="Home" />
     <item
         android:id="@+id/nav_directmessaging"
-        android:icon="@drawable/jibril"
+        android:icon="@drawable/dm"
         android:title="Profile" />
 
     <item
     android:id="@+id/nav_settings"
-    android:icon="@drawable/iqra"
+    android:icon="@drawable/settings"
     android:title="Settings" />
 
     <item
     android:id="@+id/nav_account"
-    android:icon="@drawable/reese"
-    android:title="Acciybt" />
+    android:icon="@drawable/profile"
+    android:title="Profile" />
 </menu>
