--- a/app/src/main/res/layout/settings_controller.xml
+++ b/app/src/main/res/layout/settings_controller.xml
@@ -38,7 +38,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Back to Main Menu" />
-    
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout" />
+
+
 
 
 </LinearLayout>
