--- a/app/src/main/res/layout/about_us_page.xml
+++ b/app/src/main/res/layout/about_us_page.xml
@@ -65,6 +65,17 @@ android:padding="16dp">
         android:textSize="25sp"
         android:gravity="center"
         />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/raina"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Raina Rivera - DM Page"
+        android:textSize="25sp"
+        android:gravity="center"
+        />
 <Button
     android:id="@+id/back_button"
     android:layout_width="match_parent"
