--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="#FFFFFF" />
+                android:textColor="#000000" />
 
             <EditText
                 android:id="@+id/username"
@@ -44,7 +44,7 @@
                 android:padding="8dp"
                 android:inputType="text"
                 android:autofillHints="username"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:layout_marginTop="40dp" />
 
             <EditText
@@ -58,7 +58,7 @@
                 android:padding="8dp"
                 android:inputType="textPassword"
                 android:autofillHints="password"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:layout_marginTop="20dp" />
 
             <Button
@@ -84,7 +84,7 @@
         android:elevation="4dp"
         android:padding="10dp"
         android:text="Not_Registered"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:cornerRadius="25dp" />
 
