--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/nav_directmessaging"
         android:icon="@drawable/dm"
-        android:title="Profile" />
+        android:title="Dm's" />
 
     <item
     android:id="@+id/nav_settings"
