--- a/app/src/main/res/layout/activity_dmactivity.xml
+++ b/app/src/main/res/layout/activity_dmactivity.xml
@@ -9,7 +9,7 @@
 
 
     <ListView
-        android:id="@+id/messages_list"
+        android:id="@+id/messagesList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         />
 
     <Button
-        android:id="@+id/addressButton2"
+        android:id="@+id/backButton"
         android:layout_width="95dp"
         android:layout_height="40dp"
         android:layout_marginStart="5dp"
