--- a/app/src/main/res/layout/activity_message_chat.xml
+++ b/app/src/main/res/layout/activity_message_chat.xml
@@ -5,26 +5,40 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.DMActivity">
-
+    tools:context=".activity.MessageChatActivity">
 
     <ListView
-        android:id="@+id/messagesList"
+        android:id="@+id/chatList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        android:layout_marginTop="120dp"
+        android:listSelector="@android:color/transparent"
+        />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@drawable/newdmlogo"
+        android:layout_height="120dp"
+        android:background="@drawable/shortbackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/contactNameHeader"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@id/backButton"
+        app:layout_constraintTop_toTopOf="@id/backButton"
+        android:layout_marginTop="0dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:textSize="30dp"
         />
 
     <Button
@@ -32,10 +46,8 @@
         android:layout_width="95dp"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="50dp"
         android:text="Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
